# noir

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uv.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docker/app/: Dockerfile
docker/core/: Dockerfile
src/noir/config/: config.py
src/noir/display/: __init__.py  ascii_art.py  led_matrix.py  pixoo.py
src/noir/llm_agents/: tools.py
src/noir/llm_agents/led_matrix_assistant/: led_matrix_assistant.py  system-prompt.md
src/noir/llm_agents/noir/: __init__.py  noir.py  system-prompt.md
src/noir/memory/: __init__.py  memory.py
src/noir/multi_agent/: config.py  multi_agent.py  schema.py
src/noir/multi_agent/nodes/: __init__.py  display_images.py  noir.py  utils.py
src/noir/scripts/noir/: chat.py
src/noir/scripts/pixoo/: images.py  pixoo_display.py
src/noire/llm_agents/: __init__.py  tools.py
src/noire/llm_agents/led_matrix_assistant/: __init__.py  led_matrix_assistant.py
src/noire/multi_agent/: utils.py
src/noire/multi_agent/nodes/: noir.py
src/noire/scripts/: chat.py
